// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WithHint /> should renders correctly 1`] = `
<WithHint
  text="Hello, world"
>
  <div
    data-testid="test-opener"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Opener
  </div>
</WithHint>
`;

exports[`<WithHint /> should renders correctly 2`] = `
<WithHint
  text="Hello, world"
>
  <div
    data-testid="test-opener"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Opener
  </div>
  <ForwardRef
    className="hint hidden"
  >
    <div
      className="root hint hidden"
      data-testid="hint"
    >
      <div
        className="body"
      >
        Hello, world
      </div>
    </div>
  </ForwardRef>
</WithHint>
`;

exports[`<WithHint /> should renders correctly 3`] = `
<WithHint
  text="Hello, world"
>
  <div
    data-testid="test-opener"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Opener
  </div>
</WithHint>
`;
